syntax = "proto3";
package user;
import "google/protobuf/timestamp.proto";

service UserService {
  rpc GetUser(SingleRequest) returns (User) {}
}

message User {
int64 ID = 1;
int64 TeamId = 2;
string Name = 3;
bool IsAdmin = 4;
google.protobuf.Timestamp      UpdatedAt=5;
google.protobuf.Timestamp      CreatedAt=6;
}

message SingleRequest {
int64 id = 1;
}

message Users {
    repeated User Users = 1;
}
